--- a/components/header.css
+++ b/components/header.css
@@ -1,9 +1,9 @@
 .hed{
     background-color: #f1f1ef;
     text-align: center;
-    height: 8vh;
+    height: 5vh;
     font-size: 12px;
-    padding-top: 2vh;
+    padding-top: 1vh;
     color: #979a9b;
 }
 
@@ -61,5 +61,21 @@
     .heading-arrival{
         display: none;
     }
-    
+
   }
+
+  @media only screen and (max-width: 480px) {
+    .shop-button{
+        margin-top:60%;
+    }
+
+  }
+  @media only screen and (max-width: 365px) {
+    .shop-button{
+        margin-top:55%;
+        background: transparent;
+        color: white;
+    }
+
+  }
+
